[Features]Add swaggers with current API
